--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1074,27 +1074,22 @@
     }
 }
 
-.nav-pills .nav-link.active {
-    box-shadow: 0 2px 10px rgba(67, 94, 190, .5)
-}
-
 .nav-tabs, .nav-tabs .nav-link {
     border: none
 }
 
 .nav-tabs .nav-link:hover {
     border: none;
-    text-shadow: 0 0 2px rgba(67, 94, 190, .3)
 }
 
 .nav-tabs .nav-link.active {
     border: none;
-    color: #435ebe;
+     color: #000000; 
     position: relative
 }
 
 .nav-tabs .nav-link.active:after {
-    background-color: #435ebe;
+    background-color: black; 
     bottom: 0;
     box-shadow: 0 2px 5px rgba(67, 94, 190, .5);
     content: "";
